adjust files and folders

--- a/iccv2019.tex
+++ b/iccv2019.tex
@@ -3,7 +3,10 @@
 \usepackage{iccv}
 \usepackage{times}
 \usepackage{epsfig}
+
 \usepackage{graphicx}
+\graphicspath{{figures/}}
+
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{color}
@@ -83,12 +86,12 @@ This paper proposes a novel method to address the \vqa problem. In contrast to p
 
 
 %%%%%%%%% BODY TEXT
-\input{sec-intro}
-\input{sec-related}
-\input{sec-overview}
-\input{sec-obj}
-\input{sec-reasoning}
-\input{sec-expt}
+\input{sections/sec-intro}
+\input{sections/sec-related}
+\input{sections/sec-overview}
+\input{sections/sec-obj}
+\input{sections/sec-reasoning}
+\input{sections/sec-expt}
 
 
 
