--- a/sections/sec-expt.tex
+++ b/sections/sec-expt.tex
@@ -40,7 +40,7 @@ $Q_{nl_10}$  &            &      \\ \hline
 
 \begin{figure}[tb!]
 \centering
-\includegraphics[width=\columnwidth]{./figure/PredictNB.eps}
+\includegraphics[width=\columnwidth]{PredictNB.eps}
 \vspace{-2ex}
 \caption{Inference Graphs}
 \vspace{-2ex}
