--- a/sections/sec-obj.tex
+++ b/sections/sec-obj.tex
@@ -7,7 +7,7 @@ In this section, we introduce how we do visual tasks that are in connection with
 \label{sec-visual-processing}
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=\linewidth]{figure/RLplot.png}
+\includegraphics[width=\linewidth]{RLplot.png}
 \end{center}
 \caption{Overview of our approach}
 \label{fig:RLplot}
@@ -67,17 +67,17 @@ For each vision task, the approach is not fixed, one task can be achieved by dif
 \begin{figure}[thb]
 \centering
         \begin{subfigure}[b]{0.088\textwidth}
-                \includegraphics[width=\linewidth]{figure/stand1.png}
+                \includegraphics[width=\linewidth]{stand1.png}
                 \caption{Standing}
                 \label{fig:gull}
         \end{subfigure}\quad
         \begin{subfigure}[b]{0.127\textwidth}
-                \includegraphics[width=\linewidth]{figure/move1.png}
+                \includegraphics[width=\linewidth]{move1.png}
                 \caption{Moving}
                 \label{fig:gull2}
         \end{subfigure}\quad
         \begin{subfigure}[b]{0.166\textwidth}
-                \includegraphics[width=\linewidth]{figure/expand1.png}
+                \includegraphics[width=\linewidth]{expand1.png}
                 \caption{Expansion}
                 \label{fig:tiger}
         \end{subfigure}
@@ -89,7 +89,7 @@ For each vision task, the approach is not fixed, one task can be achieved by dif
 
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=\linewidth]{figure/question.png}
+\includegraphics[width=\linewidth]{question.png}
 \end{center}
 \caption{Attention Mechanism in Query}
 \label{fig:Attention}
