--- a/sections/sec-overview.tex
+++ b/sections/sec-overview.tex
@@ -4,7 +4,7 @@
 %%%%%%%%%%%%%%%
 \begin{figure*}[tb!]
 \vspace{-1ex}
-\centerline{\includegraphics[scale=0.28]{./figure/overview.eps}}
+\centerline{\includegraphics[scale=0.28]{overview.eps}}
 \caption{Overview of our approach, Entity Attribute Graph and Queries} \label{fig-overview}
 \vspace{-2ex}
 \end{figure*}
@@ -63,7 +63,7 @@ Take Fig.~\ref{fig-overview}(c) as example. It depicts a query graph that is gen
 % %%%%%%%%%%%%%%%
 % \begin{figure*}[tb!]
 % \vspace{-1ex}
-% \centerline{\includegraphics[scale=0.28]{./figure/overview.eps}}
+% \centerline{\includegraphics[scale=0.28]{overview.eps}}
 % \caption{Overview of our approach, Entity Attribute Graph and Queries} \label{fig-overview}
 % \vspace{-2ex}
 % \end{figure*}
