--- a/sections/sec-reasoning.tex
+++ b/sections/sec-reasoning.tex
@@ -52,7 +52,7 @@ P_\mathfrak{B}(y|\mathbf{x}) = \frac{P_\mathfrak{B}(y,\mathbf{x})}{P_\mathfrak{B
 
 \begin{figure}[tb]
 \centering
-\includegraphics[width=\columnwidth]{./figure/inferGraphWorkflow}
+\includegraphics[width=\columnwidth]{inferGraphWorkflow}
 \caption{The pipeline of inference graph used for inferring the role of a person object.}
 \vspace{-4ex}
 \label{fig:inferGraphWorkflow}
@@ -83,7 +83,7 @@ After inference, one can either use a complete \kw{EAG} to answer queries, or di
 
 \begin{figure}[tb!]
 \centering
-\includegraphics[width=\columnwidth]{./figure/queries.eps}
+\includegraphics[width=\columnwidth]{queries.eps}
 \caption{Query graphs}
 \label{fig:queries}
 \end{figure}
