renamed:    makeclear.bat -> 0.makeclear.bat 	modified:   iccv2019.pdf 	modified:   iccv2019.tex 	modified:   sections/sec-expt.tex 	modified:   sections/sec-reasoning.tex

--- a/iccv2019.tex
+++ b/iccv2019.tex
@@ -86,12 +86,12 @@ This paper proposes a novel method to address the \vqa problem. In contrast to p
 
 
 %%%%%%%%% BODY TEXT
-\input{sections/sec-intro}
-\input{sections/sec-related}
-\input{sections/sec-overview}
-\input{sections/sec-obj}
+%\input{sections/sec-intro}
+%\input{sections/sec-related}
+%\input{sections/sec-overview}
+%\input{sections/sec-obj}
 \input{sections/sec-reasoning}
-\input{sections/sec-expt}
+%\input{sections/sec-expt}
 
 
 
