--- a/sections/sec-expt.tex
+++ b/sections/sec-expt.tex
@@ -22,9 +22,17 @@ $Q_{nl_4}$  & Which team does the goalkeeper belong to?          & Medium       
 $Q_{nl_5}$  & Who is the defending team?                         & Medium       \\ \hline
 $Q_{nl_6}$  & Which part of the field are the players being now? & Hard       \\ \hline
 $Q_{nl_7}$  & How many players are there in the image?           & Hard     \\ \hline
-$Q_{nl_8}$  &            &      \\ \hline
-$Q_{nl_9}$  &            &      \\ \hline
-$Q_{nl_10}$  &            &      \\ \hline
+
+\multirow{2}{*}{$Q_{nl_8}$ }
+ & Is this image about corner kick?           &  \multirow{2}{*}{\color{red}??}  \\ 
+ & {\color{red}(If not, just list the correct one.)}  & \\ \hline
+ 
+\multirow{2}{*}{$Q_{nl_9}$}  &   Is this image about penalty kick?  &  \multirow{2}{*}{\color{red}??}    \\ 
+ & {\color{red}(If not, just list the correct one.)}  &  \\ \hline
+ 
+\multirow{2}{*}{$Q_{nl_{10}}$}  &  Is this image about kick off?  &  \multirow{2}{*}{\color{red}??}    \\ 
+ & {\color{red}(If not, just list the correct one.)}  &  \\ \hline
+ 
 \end{tabular} 
 \caption{A set of questions} \label{table:questions}
 \end{table}
